# cman

./: .gitignore  flake.nix  pyproject.toml
src/cman/: api.py  backup.py  cli.py  config.py  data.py  markdown.py  nix.py  paths.py  preview-template.html  preview.py  state.py  sync.py
